--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "clean": "gatsby clean",
     "prepare": "husky install",
     "lint-staged": "lint-staged",
-    "deploy": "gatsby build && gh-pages -d public"
+    "deploy": "gatsby build && gh-pages -d public -b gh-pages" 
   },
   "lint-staged": {
     "*.{js,css,json,md}": [
